kustomize/overlay/UAT/login-ui/sa-deployments.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: login-ui

spec:
  replicas: 1

  minReadySeconds: 30

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  template:
    spec:
      serviceAccountName: pnguat-sa

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/pnguat
                    operator: Exists

        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: login-ui
                topologyKey: kubernetes.io/hostname



      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: login-ui

      containers:
        - name: login-ui

          resources:
            requests:
              cpu: 250m
              memory: 256Mi

            limits:
              cpu: 500m
              memory: 512Mi
