kustomize/overlay/UAT/login-ui/remove-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: login-ui
